Solve contrast issues

--- a/src/pages/Home_page/components/about/style.module.css
+++ b/src/pages/Home_page/components/about/style.module.css
@@ -77,11 +77,12 @@
   );
   color: white;
   display: inline-block;
-  padding: 0.6rem;
+  padding: 0.6rem 1.9rem;
   text-align: center;
   border-radius: 1rem;
   text-transform: uppercase;
   font-size: 1.5rem;
+  font-weight: bold;
 }
 .about_cv:hover {
   text-decoration: none;
